@@ -21,6 +21,9 @@ Revision history for Perl extension Module::Build.
  Other:
  - Added t/README.pod and t/sample.t to guide developers writing new tests
    [David Golden, with some code from Eric Wilhelm]
+ - Module::Build::Compat 'passthrough' style has been deprecated.  Using
+   'passthrough' will issue warnings on Makefile.PL generation.  See
+   Module::Build::Compat documentation for rationale.
 
 0.35 - Thu Aug 27 09:12:02 EDT 2009
 
